--- a/reactions_subsystems_enrichment.ipynb
+++ b/reactions_subsystems_enrichment.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +52,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Glycolysis / Gluconeogenesis', 'Starch and sucrose metabolism',\n",
+       "       'Galactose metabolism', 'Fructose and mannose metabolism',\n",
+       "       'Pentose and glucuronate interconversions', 'Pyruvate metabolism',\n",
+       "       'Propanoate metabolism', 'Butanoate metabolism',\n",
+       "       'Pentose phosphate pathway', 'Purine metabolism',\n",
+       "       'Pyrimidine metabolism', 'Nucleotide metabolism',\n",
+       "       'Alanine, aspartate and glutamate metabolism',\n",
+       "       'Arginine and proline metabolism', 'Histidine metabolism',\n",
+       "       'Glycine, serine and threonine metabolism', 'Lysine metabolism',\n",
+       "       'Tryptophan metabolism', 'Tyrosine metabolism',\n",
+       "       'Valine, leucine, and isoleucine metabolism',\n",
+       "       'Phenylalanine, tyrosine and tryptophan biosynthesis',\n",
+       "       'Cysteine and methionine metabolism', 'Glutathione metabolism',\n",
+       "       'Transport reactions', 'Beta-alanine metabolism',\n",
+       "       'Metabolism of other amino acids',\n",
+       "       'Amino sugar and nucleotide sugar metabolism',\n",
+       "       'Aminoacyl-tRNA biosynthesis', 'O-glycan metabolism',\n",
+       "       'N-glycan metabolism', 'Protein assembly', 'Protein modification',\n",
+       "       'Protein degradation', 'Miscellaneous', 'Sulfur metabolism',\n",
+       "       'C5-branched dibasic acid metabolism',\n",
+       "       'Tricarboxylic acid cycle and glyoxylate/dicarboxylate metabolism',\n",
+       "       'Oxidative phosphorylation', 'ROS detoxification',\n",
+       "       'Fatty acid activation (cytosolic)',\n",
+       "       'Fatty acid activation (endoplasmic reticular)',\n",
+       "       'Fatty acid biosynthesis (even-chain)',\n",
+       "       'Fatty acid biosynthesis (odd-chain)',\n",
+       "       'Fatty acid biosynthesis (unsaturated)',\n",
+       "       'Fatty acid elongation (even-chain)',\n",
+       "       'Fatty acid elongation (odd-chain)',\n",
+       "       'Fatty acid desaturation (even-chain)',\n",
+       "       'Fatty acid desaturation (odd-chain)', 'Fatty acid biosynthesis',\n",
+       "       'Linoleate metabolism', 'Lipoic acid metabolism',\n",
+       "       'Omega-3 fatty acid metabolism', 'Omega-6 fatty acid metabolism',\n",
+       "       'Arachidonic acid metabolism', 'Leukotriene metabolism',\n",
+       "       'Eicosanoid metabolism', 'Acyl-CoA hydrolysis',\n",
+       "       'Carnitine shuttle (cytosolic)',\n",
+       "       'Carnitine shuttle (mitochondrial)',\n",
+       "       'Carnitine shuttle (peroxisomal)',\n",
+       "       'Carnitine shuttle (endoplasmic reticular)',\n",
+       "       'Acylglycerides metabolism',\n",
+       "       'Beta oxidation of even-chain fatty acids (peroxisomal)',\n",
+       "       'Beta oxidation of odd-chain fatty acids (peroxisomal)',\n",
+       "       'Beta oxidation of unsaturated fatty acids (n-9) (peroxisomal)',\n",
+       "       'Beta oxidation of phytanic acid (peroxisomal)',\n",
+       "       'Beta oxidation of di-unsaturated fatty acids (n-6) (peroxisomal)',\n",
+       "       'Beta oxidation of even-chain fatty acids (mitochondrial)',\n",
+       "       'Beta oxidation of odd-chain fatty acids (mitochondrial)',\n",
+       "       'Beta oxidation of unsaturated fatty acids (n-7) (mitochondrial)',\n",
+       "       'Beta oxidation of unsaturated fatty acids (n-7) (peroxisomal)',\n",
+       "       'Beta oxidation of unsaturated fatty acids (n-9) (mitochondrial)',\n",
+       "       'Beta oxidation of di-unsaturated fatty acids (n-6) (mitochondrial)',\n",
+       "       'Beta oxidation of poly-unsaturated fatty acids (mitochondrial)',\n",
+       "       'Beta oxidation of branched-chain fatty acids (mitochondrial)',\n",
+       "       'Terpenoid backbone biosynthesis', 'Steroid metabolism',\n",
+       "       'Androgen metabolism',\n",
+       "       'Cholesterol biosynthesis 1 (Bloch pathway)',\n",
+       "       'Cholesterol biosynthesis 2',\n",
+       "       'Cholesterol biosynthesis 3 (Kandustch-Russell pathway)',\n",
+       "       'Cholesterol metabolism', 'Estrogen metabolism',\n",
+       "       'Formation and hydrolysis of cholesterol esters',\n",
+       "       'Sphingolipid metabolism', 'Glycerolipid metabolism',\n",
+       "       'Glycerophospholipid metabolism',\n",
+       "       'Glycosphingolipid biosynthesis-ganglio series',\n",
+       "       'Glycosphingolipid biosynthesis-globo series',\n",
+       "       'Glycosphingolipid biosynthesis-lacto and neolacto series',\n",
+       "       'Glycosphingolipid metabolism',\n",
+       "       'Glycosylphosphatidylinositol (GPI)-anchor biosynthesis',\n",
+       "       'Glucocorticoid biosynthesis', 'Prostaglandin biosynthesis',\n",
+       "       'Ether lipid metabolism', 'Isolated',\n",
+       "       'Chondroitin / heparan sulfate biosynthesis',\n",
+       "       'Chondroitin sulfate degradation', 'Heparan sulfate degradation',\n",
+       "       'Keratan sulfate biosynthesis', 'Keratan sulfate degradation',\n",
+       "       'Bile acid biosynthesis', 'Bile acid recycling',\n",
+       "       'Blood group biosynthesis',\n",
+       "       'Nicotinate and nicotinamide metabolism',\n",
+       "       'Pantothenate and CoA biosynthesis',\n",
+       "       'Inositol phosphate metabolism', 'Folate metabolism',\n",
+       "       'Biotin metabolism', 'Biopterin metabolism',\n",
+       "       'Ascorbate and aldarate metabolism', 'Porphyrin metabolism',\n",
+       "       'Retinol metabolism', 'Riboflavin metabolism',\n",
+       "       'Serotonin and melatonin biosynthesis', 'Thiamine metabolism',\n",
+       "       'Vitamin B12 metabolism', 'Vitamin B6 metabolism',\n",
+       "       'Vitamin D metabolism', 'Vitamin E metabolism',\n",
+       "       'Xenobiotics metabolism', 'Pool reactions',\n",
+       "       'Exchange/demand reactions', 'Artificial reactions',\n",
+       "       'Ubiquinone synthesis', 'Fatty acid oxidation',\n",
+       "       'Alkaloids biosynthesis', 'Heme synthesis', 'Vitamin C metabolism',\n",
+       "       'Phosphatidylinositol phosphate metabolism', 'Heme degradation',\n",
+       "       'Vitamin A metabolism', 'Phenylalanine metabolism',\n",
+       "       'CoA synthesis', 'Urea cycle', 'Dietary fiber binding',\n",
+       "       'Vitamin B2 metabolism', 'CoA catabolism',\n",
+       "       'Triacylglycerol synthesis', 'Hippurate metabolism',\n",
+       "       'Peptide metabolism', 'Drug metabolism'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.subsystem.unique()"
    ]
@@ -68,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,18 +270,18 @@
        "      <th>HMR_3905</th>\n",
        "      <td>Glycolysis / Gluconeogenesis</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>-1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>-1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -190,25 +293,25 @@
        "    <tr>\n",
        "      <th>HMR_3907</th>\n",
        "      <td>Glycolysis / Gluconeogenesis</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>-1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>-1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -225,15 +328,15 @@
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>-1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HMR_4099</th>\n",
@@ -276,7 +379,7 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -291,40 +394,40 @@
       "text/plain": [
        "                             subsystem  GIMME_293T  GIMME_A549  GIMME_Calu-3  \\\n",
        "reaction                                                                       \n",
-       "HMR_3905  Glycolysis / Gluconeogenesis         1.0        -1.0          -1.0   \n",
-       "HMR_3907  Glycolysis / Gluconeogenesis         1.0        -1.0           1.0   \n",
+       "HMR_3905  Glycolysis / Gluconeogenesis         1.0         0.0          -1.0   \n",
+       "HMR_3907  Glycolysis / Gluconeogenesis         0.0        -1.0           1.0   \n",
        "HMR_4097  Glycolysis / Gluconeogenesis         0.0         0.0           0.0   \n",
        "HMR_4099  Glycolysis / Gluconeogenesis         0.0         0.0           0.0   \n",
        "HMR_4108  Glycolysis / Gluconeogenesis         0.0         0.0           0.0   \n",
        "\n",
        "          GIMME_HBE  GIMME_Lung  iMAT_293T  iMAT_A549  iMAT_Calu-3  iMAT_HBE  \\\n",
        "reaction                                                                       \n",
-       "HMR_3905        1.0        -1.0        1.0        1.0         -1.0      -1.0   \n",
-       "HMR_3907        0.0        -1.0        1.0       -1.0          1.0       0.0   \n",
+       "HMR_3905        1.0        -1.0        0.0        0.0         -1.0       1.0   \n",
+       "HMR_3907        0.0        -1.0        0.0       -1.0          1.0       0.0   \n",
        "HMR_4097        0.0         0.0        0.0        0.0          0.0       0.0   \n",
        "HMR_4099        0.0         0.0        0.0        0.0          0.0       0.0   \n",
        "HMR_4108        0.0         0.0        0.0        0.0          0.0       0.0   \n",
        "\n",
        "          ...  INIT_293T  INIT_A549  INIT_Calu-3  INIT_HBE  INIT_Lung  \\\n",
        "reaction  ...                                                           \n",
-       "HMR_3905  ...        0.0        0.0          1.0      -1.0        0.0   \n",
-       "HMR_3907  ...        0.0        1.0          1.0      -1.0        0.0   \n",
-       "HMR_4097  ...        0.0        1.0         -1.0       1.0        0.0   \n",
+       "HMR_3905  ...        0.0        1.0          0.0      -1.0        0.0   \n",
+       "HMR_3907  ...        0.0        1.0          0.0       0.0        1.0   \n",
+       "HMR_4097  ...        0.0        0.0         -1.0       1.0        1.0   \n",
        "HMR_4099  ...        0.0        0.0          0.0       0.0        0.0   \n",
-       "HMR_4108  ...        0.0        1.0          1.0       1.0        0.0   \n",
+       "HMR_4108  ...        0.0        1.0          1.0       1.0        1.0   \n",
        "\n",
        "          tINIT_293T  tINIT_A549  tINIT_Calu-3  tINIT_HBE  tINIT_Lung  \n",
        "reaction                                                               \n",
        "HMR_3905         1.0         1.0           0.0        1.0        -1.0  \n",
-       "HMR_3907        -1.0         1.0           0.0        1.0         0.0  \n",
-       "HMR_4097         1.0         1.0           1.0        1.0         1.0  \n",
+       "HMR_3907        -1.0         1.0           0.0        0.0         0.0  \n",
+       "HMR_4097         1.0         1.0           1.0        1.0         0.0  \n",
        "HMR_4099         0.0         0.0           0.0        0.0         0.0  \n",
        "HMR_4108         0.0         1.0           1.0        1.0         1.0  \n",
        "\n",
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,6 +465,13 @@
     "writer.save()\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -384,5 +494,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
